refactor: make it java8 compatible